week-view today marked

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%;background-color: #f6fa7f;">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -399,7 +399,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%;background-color: #f6fa7f;">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -528,7 +528,7 @@
 										<tr>
 											<th>Time</th>
 											<th>03.12.</th>
-											<th>04.12.</th>
+											<th class="todaymarkedstrong">04.12.</th>
 											<th>05.12.</th>
 											<th>06.12.</th>
 											<th>07.12.</th>
@@ -564,7 +564,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&euro;500</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&euro;500</p>
 														</div>
 													</div>
 												</div>
@@ -672,7 +672,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -780,7 +780,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -888,7 +888,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -996,7 +996,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1104,7 +1104,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1212,7 +1212,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1320,7 +1320,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1428,7 +1428,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&euro;500</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&euro;500</p>
 														</div>
 													</div>
 												</div>
@@ -1536,7 +1536,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1644,7 +1644,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1752,7 +1752,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1860,7 +1860,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -1968,7 +1968,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2076,7 +2076,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2184,7 +2184,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2292,7 +2292,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&euro;500</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&euro;500</p>
 														</div>
 													</div>
 												</div>
@@ -2400,7 +2400,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2508,7 +2508,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2616,7 +2616,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2724,7 +2724,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2832,7 +2832,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -2940,7 +2940,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3048,7 +3048,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3156,7 +3156,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&euro;500</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&euro;500</p>
 														</div>
 													</div>
 												</div>
@@ -3264,7 +3264,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3372,7 +3372,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3480,7 +3480,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3588,7 +3588,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3696,7 +3696,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3804,7 +3804,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
@@ -3912,7 +3912,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px">&nbsp;</p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px">&nbsp;</p>
 														</div>
 													</div>
 												</div>
