--- a/index.html
+++ b/index.html
@@ -4485,20 +4485,20 @@
 						<div class="accordion-group">
 							<div class="accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse" data-parent="#tu_fp_search_content_filter" href="#collapseOne">
-									Filter:
+									Filter <i class="icon-arrow-up"></i>
 								</a>
 							</div>
 							<div id="collapseOne" class="accordion-body collapse" style="height: 0px;">
 								<div class="accordion-inner">								
 									<div class="clearfix" Style="width:50%;float:left">
-										<label>From:</label>
+										<label>Begin Date:</label>
 										<div class="input">
 											<input class="xlarge disabled date" placeholder=""/>
 										</div>
 									</div>
 								
 									<div class="clearfix" Style="width:50%;float:left">
-										<label>To:</label>
+										<label>End Date:</label>
 										<div class="input">
 											<input class="xlarge disabled date" placeholder=""/>
 										</div>
