tableview: prework for Stan ;)

--- a/index.html
+++ b/index.html
@@ -4275,6 +4275,9 @@
 								</tbody>
 							</table>
 							</div>
+						<div id="tableview" class="tab-pane">
+							<h2>Chuck Testa</h2>
+						</div>
 					</div>
 				</div>
 			</div>
