tableview: added whole viewing experience

--- a/index.html
+++ b/index.html
@@ -4276,7 +4276,121 @@
 							</table>
 							</div>
 						<div id="tableview" class="tab-pane">
-							<h2>Chuck Testaaaa!</h2>
+							<div>
+								<div id="tableview_wrapper" class="dataTables_wrapper" role="grid">
+									<table id="tableview_table" class="table table-bordered dataTable table-hover" cellspacing="0" cellpadding="0" border="0" aria-describedby="example_info">
+										<thead>
+											<tr role="row">
+												<th class="sorting_asc" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Date: activate to sort column descending">Date</th>
+												<th class="sorting" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-label="Time: activate to sort column ascending">Time</th>
+												<th class="sorting" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-label="Value: activate to sort column ascending">Value</th>
+												<th class="sorting" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Description</th>
+												<th class="sorting" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-label="Category: activate to sort column ascending">Category</th>
+											</tr>
+										</thead>
+										<tbody role="alert" aria-live="polite" aria-relevant="all">
+											<tr class="gradeA odd success">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">01.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">3500&euro;</td>
+												<td class="center ">Salary</td>
+												<td class="center ">Salary</td>
+											</tr>
+											<tr class="gradeA odd info">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">03.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-200&euro;</td>
+												<td class="center ">Playstation 4</td>
+												<td class="center ">IT</td>
+											</tr>
+											<tr class="gradeA even">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">05.12.2012</td>
+												<td class=" ">17:00</td>
+												<td class=" ">-105&euro;</td>
+												<td class="center ">E-Guitar Pickups</td>
+												<td class="center ">Music</td>
+											</tr>
+											<tr class="gradeA odd">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-35&euro;</td>
+												<td class="center ">Lunch</td>
+												<td class="center ">Food</td>
+											</tr>
+											<tr class="gradeA even">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">17:00</td>
+												<td class=" ">-350&euro;</td>
+												<td class="center ">new door</td>
+												<td class="center ">Misc</td>
+											</tr>
+											<tr class="gradeA odd">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-48&euro;</td>
+												<td class="center ">Christmas present</td>
+												<td class="center ">Present</td>
+											</tr>
+												<tr class="gradeA odd">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">17:00</td>
+												<td class=" ">-10&euro;</td>
+												<td class="center ">Vegetables</td>
+												<td class="center ">Food</td>
+											</tr>
+											<tr class="gradeA odd">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-16&euro;</td>
+												<td class="center ">Ticket</td>
+												<td class="center ">Misc</td>
+											</tr>
+											<tr class="gradeA odd info">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-90&euro;</td>
+												<td class="center ">Playstation 4 Games</td>
+												<td class="center ">IT</td>
+											</tr>
+											<tr class="gradeA even">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">17:00</td>
+												<td class=" ">-71&euro;</td>
+												<td class="center ">Trousers</td>
+												<td class="center ">Misc</td>
+											</tr>
+											<tr class="gradeA odd">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-24&euro;</td>
+												<td class="center ">Cinema Tickets</td>
+												<td class="center ">Misc</td>
+											</tr>
+											<tr class="gradeA even info">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<td class=" ">17:00</td>
+												<td class=" ">-47&euro;</td>
+												<td class="center ">New tires</td>
+												<td class="center ">IT</td>
+											</tr>
+											<tr class="gradeA odd">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">08.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-1&euro;</td>
+												<td class="center ">Hamburger</td>
+												<td class="center ">Food</td>
+											</tr>
+											<tr class="gradeA even info">
+												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">08.12.2012</td>
+												<td class=" ">08:00</td>
+												<td class=" ">-63&euro;</td>
+												<td class="center ">New RAM</td>
+												<td class="center ">IT</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
