bugfixes in evaluation

--- a/index.html
+++ b/index.html
@@ -4456,7 +4456,7 @@
 								<label class="control-label" for="category-chooser" style="width:80px">Category:&nbsp;</label>
 								<select name="category" id="category-chooser">
 									<option selected>[All]</option>
-									<option>Income</option>
+									<option>Salary</option>
 									<option>Car</option>
 									<option>Common</option>
 									<option>Energy</option>
@@ -4476,7 +4476,7 @@
 						</div>
 						<div class="span2" style="width:90%;height:430px;margin:0;padding:0">
 							<div class="statisticsspace">
-								<div class="statisticsbarup" style="background-color:#aaaaee;height:180px;left:10px" hidden>Income</div>
+								<div class="statisticsbarup" style="background-color:#aaaaee;height:180px;left:10px" hidden>Salary</div>
 								<div class="statisticsbarup" style="background-color:#ffaaaa;height:30px;left:310px" hidden>Insurances
 									<div class="statisticsbarup" style="background-color:#2173fa;height:10px" hidden></div>
 								</div>
