corrected diagram in week-view & added it to month-view

--- a/index.html
+++ b/index.html
@@ -538,7 +538,9 @@
 									</div>
 								</div>
 							</div>
-					
+							<div>
+								<img src="img/tu_fp/evaluation/statistics-all.png">
+							</div>
 						
 						</div>
 						<div id="week" class="tab-pane">
@@ -4017,7 +4019,7 @@
 								</table>
 							</div>
 							<div>
-								<img src="img/tu_fp/week_view_graph.png">
+								<img src="img/tu_fp/evaluation/statistics-all.png">
 							</div>
 						</div>
 						<div id="day" class="tab-pane">
