--- a/index.html
+++ b/index.html
@@ -4073,7 +4073,7 @@
 			</div>
 			<div class="modal-footer">
 				<a href="#" class="btn" data-dismiss="modal">Cancel</a>
-				<a href="#" class="btn btn-primary">Save</a>
+				<a href="#" class="btn btn-primary">Save and Continue</a>
 			</div>
 		</div>
 	<!-- END OF MODAL DIALOG -->
@@ -4187,7 +4187,7 @@
 			</div>
 			<div class="modal-footer">
 				<a href="#" class="btn" data-dismiss="modal">Close</a>
-				<a href="#" class="btn btn-primary">Save</a>
+				<a href="#" class="btn btn-primary">Save and Continue</a>
 			</div>
 		</div>
 	<!-- END OF MODAL DIALOG -->	
