--- a/index.html
+++ b/index.html
@@ -3435,99 +3435,99 @@
 											</tr>
 										</thead>
 										<tbody role="alert" aria-live="polite" aria-relevant="all">
-											<tr class="gradeA odd success">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">01.12.2012</td>
+											<tr class="gradeA odd success searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">01.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">3500&euro;</td>
 												<td class="center ">Salary</td>
 												<td class="center ">Salary</td>
 											</tr>
-											<tr class="gradeA odd info">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">03.12.2012</td>
+											<tr class="gradeA odd info searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">03.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-200&euro;</td>
 												<td class="center ">Playstation 4</td>
 												<td class="center ">IT</td>
 											</tr>
-											<tr class="gradeA even">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">05.12.2012</td>
+											<tr class="gradeA even searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">05.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-105&euro;</td>
 												<td class="center ">E-Guitar Pickups</td>
 												<td class="center ">Music</td>
 											</tr>
-											<tr class="gradeA odd">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA odd searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-35&euro;</td>
 												<td class="center ">Lunch</td>
 												<td class="center ">Food</td>
 											</tr>
-											<tr class="gradeA even">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA even searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-350&euro;</td>
 												<td class="center ">new door</td>
 												<td class="center ">Misc</td>
 											</tr>
-											<tr class="gradeA odd">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA odd searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-48&euro;</td>
 												<td class="center ">Christmas present</td>
 												<td class="center ">Present</td>
 											</tr>
-												<tr class="gradeA odd">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+												<tr class="gradeA odd searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-10&euro;</td>
 												<td class="center ">Vegetables</td>
 												<td class="center ">Food</td>
 											</tr>
-											<tr class="gradeA odd">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA odd searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-16&euro;</td>
 												<td class="center ">Ticket</td>
 												<td class="center ">Misc</td>
 											</tr>
-											<tr class="gradeA odd info">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA odd info searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-90&euro;</td>
 												<td class="center ">Playstation 4 Games</td>
 												<td class="center ">IT</td>
 											</tr>
-											<tr class="gradeA even">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA even searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-71&euro;</td>
 												<td class="center ">Trousers</td>
 												<td class="center ">Misc</td>
 											</tr>
-											<tr class="gradeA odd">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA odd searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-24&euro;</td>
 												<td class="center ">Cinema Tickets</td>
 												<td class="center ">Misc</td>
 											</tr>
-											<tr class="gradeA even info">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
+											<tr class="gradeA even info searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-47&euro;</td>
 												<td class="center ">New tires</td>
 												<td class="center ">IT</td>
 											</tr>
-											<tr class="gradeA odd">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">08.12.2012</td>
+											<tr class="gradeA odd searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">08.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-1&euro;</td>
 												<td class="center ">Hamburger</td>
 												<td class="center ">Food</td>
 											</tr>
-											<tr class="gradeA even info">
-												<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">08.12.2012</td>
+											<tr class="gradeA even info searchPointer" data-toggle="modal" href="#editRecord">
+												<td class="sorting_1">08.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-63&euro;</td>
 												<td class="center ">New RAM</td>
@@ -3846,101 +3846,101 @@
 								<tbody role="alert" aria-live="polite" aria-relevant="all">
 									<tr class="gradeA odd success">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">01.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">3500&euro;</td>
-										<td class="center ">Salary</td>
-										<td class="center ">Salary</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">3500&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Salary</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Salary</td>
 									</tr>
 									<tr class="gradeA odd info">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">03.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-200&euro;</td>
-										<td class="center ">Playstation 4</td>
-										<td class="center ">IT</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-200&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Playstation 4</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">IT</td>
 									</tr>
 									<tr class="gradeA even">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">05.12.2012</td>
-										<td class=" ">17:00</td>
-										<td class=" ">-105&euro;</td>
-										<td class="center ">E-Guitar Pickups</td>
-										<td class="center ">Music</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">17:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-105&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">E-Guitar Pickups</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Music</td>
 									</tr>
 									<tr class="gradeA odd">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-35&euro;</td>
-										<td class="center ">Lunch</td>
-										<td class="center ">Food</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-35&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Lunch</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Food</td>
 									</tr>
 									<tr class="gradeA even">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">17:00</td>
-										<td class=" ">-350&euro;</td>
-										<td class="center ">new door</td>
-										<td class="center ">Misc</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">17:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-350&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">new door</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Misc</td>
 									</tr>
 									<tr class="gradeA odd">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-48&euro;</td>
-										<td class="center ">Christmas present</td>
-										<td class="center ">Present</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-48&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Christmas present</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Present</td>
 									</tr>
 										<tr class="gradeA odd">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">17:00</td>
-										<td class=" ">-10&euro;</td>
-										<td class="center ">Vegetables</td>
-										<td class="center ">Food</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">17:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-10&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Vegetables</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Food</td>
 									</tr>
 									<tr class="gradeA odd">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-16&euro;</td>
-										<td class="center ">Ticket</td>
-										<td class="center ">Misc</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-16&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Ticket</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Misc</td>
 									</tr>
 									<tr class="gradeA odd info">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-90&euro;</td>
-										<td class="center ">Playstation 4 Games</td>
-										<td class="center ">IT</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-90&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Playstation 4 Games</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">IT</td>
 									</tr>
 									<tr class="gradeA even">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">17:00</td>
-										<td class=" ">-71&euro;</td>
-										<td class="center ">Trousers</td>
-										<td class="center ">Misc</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">17:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-71&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Trousers</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Misc</td>
 									</tr>
 									<tr class="gradeA odd">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-24&euro;</td>
-										<td class="center ">Cinema Tickets</td>
-										<td class="center ">Misc</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-24&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Cinema Tickets</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Misc</td>
 									</tr>
 									<tr class="gradeA even info">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">07.12.2012</td>
-										<td class=" ">17:00</td>
-										<td class=" ">-47&euro;</td>
-										<td class="center ">New tires</td>
-										<td class="center ">IT</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">17:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-47&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">New tires</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">IT</td>
 									</tr>
 									<tr class="gradeA odd">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">08.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-1&euro;</td>
-										<td class="center ">Hamburger</td>
-										<td class="center ">Food</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-1&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Hamburger</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">Food</td>
 									</tr>
 									<tr class="gradeA even info">
 										<td class="searchPointer sorting_1" onClick="showDayView();hideShowDiv('tu_fp_search_content','tu_fp_global_container')">08.12.2012</td>
-										<td class=" ">08:00</td>
-										<td class=" ">-63&euro;</td>
-										<td class="center ">New RAM</td>
-										<td class="center ">IT</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">08:00</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">-63&euro;</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">New RAM</td>
+										<td class="searchPointer" data-toggle="modal" href="#editRecord">IT</td>
 									</tr>
 								</tbody>
 							</table>
