changings to akku-position, not ready yet

--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 		</div>
 	</div>
 
-	<div class="container" id="wrapper">
-		<div style="width:100%">
+		<div class="row">
+	<div class="container" id="wrapper" style="width:90%">
+		<div style="width:90%">
 		<div class="container tab-content" id="tu_fp_global_container" style="float:left;width:80%">
 			<div class="tab-pane active" id="tu_fp_home_content" style="width:100%">
 				<div style="width:80%;float:left">
@@ -3947,16 +3948,7 @@
 			</div>
 		</div>
 		
-		<div class="container" style="width:15%;float:left;position:relative">
-			<div class="spacer100 akkupositivspace" style="width:100%">
-				<div class="spacer100 akkupositivspace" style="position:absolute;bottom:0;height:50%">
-					<p style="position:absolute;bottom:70%;text-align:center"><b>current money status</b></p>
-					<div class="spacer100 akkupositiv" style="height:70%;width:50%;left:15%" hidden><p class="akkuvalue">800&euro;</p></div>
-				</div>
-			</div>
-			<div class="spacer100 akkuline" style="position:absolute;margin:0 auto;float:none; left: 5%"></div>
-			<div class="spacer100 akkunegativ" hidden><p class="akkuvalue">800&euro;</p></div>
-		</div>
+
 		
 		
 		
@@ -4075,6 +4067,16 @@
 		</div>
 	<!-- END OF MODAL DIALOG -->
 	</div>
+		<div class="container" style="width:1%;clear:none;float:right;position:relative">
+			<div class="spacer100 akkupositivspace" style="width:100%">
+				<div class="spacer100 akkupositivspace" style="position:absolute;bottom:0;height:50%">
+					<p style="position:absolute;bottom:70%;text-align:center"><b>current money status</b></p>
+					<div class="spacer100 akkupositiv" style="height:70%;width:50%;left:15%" hidden><p class="akkuvalue">800&euro;</p></div>
+				</div>
+			</div>
+			<div class="spacer100 akkuline" style="position:absolute;margin:0 auto;float:none; left: 5%"></div>
+			<div class="spacer100 akkunegativ" hidden><p class="akkuvalue">800&euro;</p></div>
+		</div>
 </div>
 
 <!-- Begin Bootstrap Includes -->
